Set title and change layout

--- a/app/reset.css
+++ b/app/reset.css
@@ -1,9 +1,14 @@
 * {
   box-sizing: border-box;
+  color: #aaa;
   margin: 0;
 }
 
 :root {
-  background: #f9f9f9;
+  background: #222;
   color-scheme: light;
+}
+
+a {
+  text-decoration: none;
 }
